Fixed line vertical alignment

--- a/src/sections/intro.scss
+++ b/src/sections/intro.scss
@@ -46,7 +46,7 @@ $negative-small-offset: -500vh;
 	width: 3rem;
 	height: 3rem;
 	top: 2rem;
-	left: 2rem;
+	right: 2rem;
 	cursor: pointer;
 	border: none;
 	-webkit-filter: invert(100%); /* safari 6.0 - 9.0 */
@@ -144,7 +144,9 @@ $negative-small-offset: -500vh;
 #largeLine.final {
 	justify-self: flex-end;
 	margin-bottom: 0;
-	top: calc(max(-1.25vw, -1.5vh));
+	top: 0;
+	top: 0.5vw;
+	// top: calc(max(-0.75vw, -1vh));
 	@extend .delayed-transition;
 }
 
@@ -165,7 +167,7 @@ $negative-small-offset: -500vh;
 	width: 9.56vw;
 	border: $line-border;
 	border-radius: 5px;
-	top: calc(min(1vw, 1.5vh));
+	top: 2vw;
 }
 
 #leftLine {
@@ -189,8 +191,9 @@ $negative-small-offset: -500vh;
 .letter {
 	position: relative;
 	margin: 0px;
+	padding: 0 25%;
 	display: inline-block;
-	vertical-align: middle;
+	vertical-align: top;
 	line-height: 100%;
 	transition: padding $duration, margin $duration;
 }
@@ -262,6 +265,8 @@ $negative-small-offset: -500vh;
 }
 
 #sterlingS.final, #sterlingG.final {
+	position: realtive;
+	top: -1vw;
 	padding: 0;
 	margin: 0;
 	height: fit-content;
